syntax = "proto3";
package myservice;

service MyService {
    rpc getRecord (RecordRequest) returns (RecordResponse) {}
    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
}

message RecordRequest {
    string id = 1;
}

message RecordResponse {
    string record = 1;
}

message CreatePostRequest {
    string name = 1;
    string description = 2;
}

message CreatePostResponse {
    int64 post_id = 1;
}
